cmake_minimum_required(VERSION 2.6)
set(BOOST_INCLUDEDIR /usr/include)
set(BOOST_LIBRARYDIR /usr/lib)
set(Boost_FIND_VERSION_EXACT TRUE)
set(Boost_Debug TRUE)
set(Boost_ADDITIONAL_VERSIONS "1.58" "1.58.0")
include(FindBoost)
find_package(Boost 1.58.0 COMPONENTS python-py35 thread unit_test_framework)
if (NOT Boost_FOUND)
message(FATAL " Boost library not found!")
endif()
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
include_directories(${Boost_INCLUDE_DIRS} /usr/include/python3.5m)
message(STATUS ${Boost_LIBRARIES})
add_subdirectory(python_orocos_kdl)
